// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Component Matches the blue striped snapshot 1`] = `
<div
  className="bcgov-table bcgov-blue-stripe"
>
  <b>
    
  </b>
  <div
    className="bcgov-table-body"
  >
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        BCeID
      </div>
      <div>
        bobross42
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        Last Name
      </div>
      <div>
        Ross
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        First Name
      </div>
      <div>
        Bob
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        Email Address
      </div>
      <div>
        bob.ross@example.com
      </div>
    </div>
  </div>
</div>
`;

exports[`Table Component Matches the default snapshot 1`] = `
<div
  className="bcgov-table "
>
  <b>
    BCeID Info
  </b>
  <div
    className="bcgov-table-body"
  >
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        BCeID
      </div>
      <div>
        bobross42
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        Last Name
      </div>
      <div>
        Ross
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        First Name
      </div>
      <div>
        Bob
      </div>
    </div>
    <div
      className="bcgov-row "
    >
      <div
        className="bcgov-vertical-middle "
      >
        Email Address
      </div>
      <div>
        bob.ross@example.com
      </div>
    </div>
  </div>
</div>
`;
